# seva

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
changelog/: v1.0.0.md  v1.1.0.md  v1.1.2.md  v1.1.4.md  v1.2.0.md
src/: lib.rs  main.rs  sys.rs
src/client/: art.rs  client.rs  mod.rs  server.rs  sftp.rs  stream.rs  system.rs  ui.rs
src/ui/: art.rs  build.rs  layout.rs  mod.rs
