[package]
name = "seva"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
dirs = "5.0.1"
queue = "0.3.1"
ratatui = "0.30.0"
reqwest = "0.12.7"
rust-crypto = "0.2.36"
serde_json = "1.0.128"
ssh2 = "0.9.3"
sysinfo = "0.38.4"
systemctl = "0.3.1"
openssl = { version = "0.10.71", features = ["vendored"] }
once_cell = "1.21.3"
anyhow = "1.0.102"
tokio = { version = "1.51.0", features = ["time", "macros", "rt-multi-thread"]} 
tachyonfx = "0.25.0"
gfxinfo = "0.1.2"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
debug = 0
panic = "abort"
