[package]
name = "seva"
version = "1.0.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
queue = "0.3.1"
ratatui = "0.30.0"
sysinfo = "0.38.4"
once_cell = "1.21.3"
anyhow = "1.0.102"
tokio = { version = "1.51.0", features = ["time", "macros", "rt-multi-thread"]} 
dmidecode = "1.0.1"
uuid = "1.23.1"
libnvme = "0.9.0"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
debug = 0
panic = "abort"
